v8/tests/messages/property-store-megamorphic.out
property-store-megamorphic.js:3: Uncaught TypeError: Cannot set property 'foo' of null
function set_foo(obj) { obj.foo = 4; }
                                ^
